tests/baselines/reference/tsxUnionTypeComponent1.errors.txt
tests/cases/conformance/jsx/file.tsx(10,18): error TS2604: JSX element type 'AnyComponent' does not have any construct or call signatures.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    interface ComponentProps {
        AnyComponent: React.StatelessComponent<any> | React.ComponentClass<any>;
    }
    
    class MyComponent extends React.Component<ComponentProps, {}> {
        render() {
            const { AnyComponent } = this.props;
            return (<AnyComponent />);
                     ~~~~~~~~~~~~
!!! error TS2604: JSX element type 'AnyComponent' does not have any construct or call signatures.
        }
    }
    
    // Stateless Component As Props
    <MyComponent AnyComponent={() => <button>test</button>}/>
    
    // Component Class as Props
    class MyButtonComponent extends React.Component<{},{}> {
    }
    
    <MyComponent AnyComponent={MyButtonComponent} />
    
    